[gd_scene load_steps=4 format=3 uid="uid://d2f3ohhuwhuox"]

[ext_resource type="Script" uid="uid://jbpqiqqbsba6" path="res://scenes/menus/level_select_menu/level_select_menu.gd" id="1_a0tqu"]
[ext_resource type="Script" uid="uid://1nf36h0gms3q" path="res://addons/maaacks_game_template/base/nodes/utilities/capture_focus.gd" id="2_tjb7s"]
[ext_resource type="Script" uid="uid://wjq7li836lwj" path="res://addons/maaacks_game_template/extras/scripts/scene_lister.gd" id="3_le4jx"]

[node name="LevelSelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a0tqu")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_tjb7s")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -44.0
offset_right = 206.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"WidgetPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Map auswählen"
horizontal_alignment = 1

[node name="LevelButtonsContainer" type="ItemList" parent="Control/VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
auto_height = true

[node name="PanelContainer2" type="PanelContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"WidgetPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Schwierigkeitsgrad auswählen"
horizontal_alignment = 1

[node name="DifficultyButtonsContainer" type="ItemList" parent="Control/VBoxContainer/PanelContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
auto_height = true

[node name="StartButton" type="Button" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Weiter"

[node name="SceneLister" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_le4jx")
files = Array[String](["res://scenes/game_scene/levels/maps//playertest.tscn"])
directory = "res://scenes/game_scene/levels/maps/"

[connection signal="item_activated" from="Control/VBoxContainer/PanelContainer/VBoxContainer/LevelButtonsContainer" to="." method="_on_level_buttons_container_item_activated"]
[connection signal="item_activated" from="Control/VBoxContainer/PanelContainer2/VBoxContainer/DifficultyButtonsContainer" to="." method="_on_difficulty_buttons_container_item_activated"]
[connection signal="pressed" from="Control/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
